# rust-auth

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 01_table_init.sql  20240101000001_init_users.sql  20240101000002_add_refresh_tokens.sql
backend/src/: main.rs  models.rs
backend/src/routes/: auth.rs  cookies.rs  extractor.rs  jwt.rs  mod.rs
backend/src/security/: rate_limit.rs
frontend/: auth.html
frontend/js/: script.js
