[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
dotenvy = "0.15"