[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
dotenvy = "0.15"
governor = "0.6"
tower_governor = { version = "0.4", features = ["axum"] }
tracing        = "0.1"
tracing-subscriber = "0.3"